fix image card spacing

--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -5,7 +5,7 @@
     min-height: 26rem;
     border-radius: 10px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
-    margin: 0 0 3rem 0; /* Removed the right margin to prevent overflow in grid */
+    margin: 10px
 }
 
 .cardContainer:hover {
